--- a/app/views/v1/cookies/cookies-decision.html
+++ b/app/views/v1/cookies/cookies-decision.html
@@ -1,46 +1,29 @@
 
-<!-- Extends the layout from /views/layout.html -->
-{% extends 'layout-cookies-1.html' %}
 
+{% extends 'layout.html' %}
 
-<!-- 
-  In /views/layout.html you can:
-    - edit the header and footer 
-    - add custom CSS and JavaScript
--->
-
-<!-- Set the page title -->
-{% block pageTitle %}
-  {{ serviceName }}
-{% endblock %}
-
-<!-- For adding a breadcrumb -->
-<!-- Code examples can be found at https://service-manual.nhs.uk/design-system/components/breadcrumbs -->
-{% block beforeContent %}
-
-
-
-
-{% endblock %}
-
-<!-- For adding a back link -->
-<!-- Code examples can be found at https://service-manual.nhs.uk/design-system/components/back-link -->
-{% block outerContent %}
-
-
+{% block header %}
+  <div class="nhsuk-success-banner" id="nhsuk-cookie-confirmation-banner" style="background-color: #007f3b; color: white; padding: 10px 0; text-align: center; display: block; width: 100%; box-sizing: border-box;">
+    <div class="nhsuk-width-container" style="text-align: left;">
+      <p id="nhsuk-success-banner__message" style="margin: 0; line-height: 1.5;">
+        You can change your cookie settings at any time using our <a href="choose-cookies" style="color: white; text-decoration: underline;">cookies page</a>.
+      </p>
+    </div>
+  </div>
+  {{ header({
+    "service": {
+        "name": serviceName,
+        "href": "/"
+      },
+      "showNav": "false",
+      "showSearch": "false"
+    })
+  }}
 {% endblock %}
 
 
-<!-- For adding page content -->
-<!-- Page layout code can be found at https://service-manual.nhs.uk/design-system/styles/layout -->
 
-
-
-<!-- For adding page content -->
-<!-- Page layout code can be found at https://service-manual.nhs.uk/design-system/styles/layout -->
 {% block content %}
-
-
 
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
@@ -99,7 +82,5 @@
 
   </div>
 </div>
-
-{{ data | debugData | safe }}
 
 {% endblock %}
