Adding in the alternative versions of the confirmation page, with a config option for the prototype. Adding in the phase banner.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -33,11 +33,11 @@ NHS.UK prototype kit
       <p>This prototype is a recreation of the current live product. It will form the basis of future iteration work.</p>
 
       {{ button({
-        text: 'Launch prototype v1',
-        href: '/v1/start?userRecordFound=true'
+        text: 'Launch v1 prototype',
+        href: '/v1/start'
       }) }}
 
-      <p class="nhsuk-body"><a href="/v1/start?userRecordFound=false">Launch prototype v1 - "No record found" route</a></p>
+      <p class="nhsuk-body"><a href="/v1/">Configure v1 prototype</a></p>
 
     {% endset -%} 
     
