--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -21,6 +21,7 @@
 <!-- Edit the header -->
 <!-- Header code examples can be found at https://service-manual.nhs.uk/design-system/components/header -->
 {% block header %}
+
   {{ header({
     "service": {
         "name": serviceName,
@@ -30,6 +31,17 @@
       "showSearch": "false"
     })
   }}
+
+  <!-- PHASE BANNER -->
+  <div class="nhsuk-width-container">
+    <div class="nhsuk-phase-banner">
+      <p class="nhsuk-phase-banner__content">
+        <strong class="nhsuk-tag nhsuk-phase-banner__content__tag">{{ data.phaseBannerTagText }}</strong>
+        <span class="nhsuk-phase-banner__text">This is a new service – your <a class="nhsuk-link" href="{{ data.feedbackLink }}" target="_blank" rel="noopener">feedback (opens in a new tab)</a> will help us to improve it.</span>
+      </p>
+    </div>
+  </div>
+
 {% endblock %}
 
 <!-- Edit the footer -->
