Fixing under 16 pages.

--- a/app/views/v2/confirmation--under-16.html
+++ b/app/views/v2/confirmation--under-16.html
@@ -32,8 +32,10 @@
       </ul>
     </div>
 
+
+
     {{ list({
-      title: 'You do not automatically get free',
+      title: 'You do not automatically get help with',
       type: 'cross',
       hidePrefix: true,
       headingLevel: 2,
