--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -17,3 +17,16 @@
     padding: 20px;
     margin: 0px 0px 30px 0px;
   }
+
+  .nhsuk-list--circle {
+    list-style: none;
+    margin-top: 0;
+    padding-left: 40px;
+    position: relative;
+  }
+
+  .nhsuk-list--circle svg {
+    left: -4px;
+    margin-top: -5px;
+    position: absolute;
+  }
