--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -18,14 +18,16 @@
     margin: 0px 0px 30px 0px;
   }
 
-  .nhsuk-list--circle {
+  .nhsuk-list--circle,
+  .nhsuk-list--dash {
     list-style: none;
     margin-top: 0;
     padding-left: 40px;
     position: relative;
   }
 
-  .nhsuk-list--circle svg {
+  .nhsuk-list--circle svg,
+  .nhsuk-list--dash svg {
     left: -4px;
     margin-top: -5px;
     position: absolute;
