--- a/app/views/index.html
+++ b/app/views/index.html
@@ -128,6 +128,10 @@ NHS.UK prototype kit
           [
             { text: 'Confirmation - HRT PPC' },
             { html: '<a class="nhsuk-link" href="v2/confirmation--exemption-found-hrt-ppc">Confirmation</a>' }
+          ],
+          [
+            { text: 'Confirmation - Qualifying benefit' },
+            { html: '<a class="nhsuk-link" href="v2/confirmation--exemption-found-benefits">Confirmation</a>' }
           ]
         ]
       }) }}
