--- a/app/views/v2/confirmation--under-16.html
+++ b/app/views/v2/confirmation--under-16.html
@@ -27,8 +27,8 @@
     <div class="nhsuk-do-dont-list">
       <h2 class="nhsuk-do-dont-list__label">You get money off</h2>
       <ul class="nhsuk-list nhsuk-list--circle" role="list">
-        <li><svg class="nhsuk-icon nhsuk-icon__cross" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" width="34" height="34"><path d="M12,3c4.967,0 9,4.033 9,9c0,4.967 -4.033,9 -9,9c-4.967,-0 -9,-4.033 -9,-9c-0,-4.967 4.033,-9 9,-9Zm0,3c-3.311,-0 -6,2.689 -6,6c-0,3.311 2.689,6 6,6c3.311,-0 6,-2.689 6,-6c-0,-3.311 -2.689,-6 -6,-6Z" style="fill:#f90;"/></svg>new glasses or contact lenses</li>
-        <li><svg class="nhsuk-icon nhsuk-icon__cross" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" width="34" height="34"><path d="M12,3c4.967,0 9,4.033 9,9c0,4.967 -4.033,9 -9,9c-4.967,-0 -9,-4.033 -9,-9c-0,-4.967 4.033,-9 9,-9Zm0,3c-3.311,-0 -6,2.689 -6,6c-0,3.311 2.689,6 6,6c3.311,-0 6,-2.689 6,-6c-0,-3.311 -2.689,-6 -6,-6Z" style="fill:#f90;"/></svg>repairing or replacing your glasses or contact lenses</li>
+        <li><svg class="nhsuk-icon nhsuk-icon__dash" width="34" height="34" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;"><path d="M20,12l-16,0" style="fill:none;fill-rule:nonzero;stroke:#f90;stroke-width:4px;"/></svg>new glasses or contact lenses</li>
+        <li><svg class="nhsuk-icon nhsuk-icon__dash" width="34" height="34" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;"><path d="M20,12l-16,0" style="fill:none;fill-rule:nonzero;stroke:#f90;stroke-width:4.82px;"/></svg>repairing or replacing your glasses or contact lenses</li>
       </ul>
     </div>
 
