Tidying up the typo in the headers.

--- a/app/views/v2/confirmation--60-or-over.html
+++ b/app/views/v2/confirmation--60-or-over.html
@@ -8,7 +8,7 @@
 
 
     {{ panel({
-      titleText: 'You get help with help costs',
+      titleText: 'You get help with health costs',
       html: 'You are aged 60 or over'
     }) }}
    
