--- a/app/views/v2/confirmation--under-16.html
+++ b/app/views/v2/confirmation--under-16.html
@@ -7,7 +7,7 @@
   <div class="nhsuk-grid-column-two-thirds">
 
    {{ panel({
-      titleText: 'You get help with help costs',
+      titleText: 'You get help with health costs',
       html: 'You are under 16'
     }) }}
 
