Tweaked wording on the MATEX exemption page.

--- a/app/views/v2/exemption--matex.html
+++ b/app/views/v2/exemption--matex.html
@@ -85,7 +85,7 @@
 
      <h3 class="nhsuk-heading-s">Add your certificate to an Apple Wallet</h2>
     <p class="nhsuk-body">If you use Apple Wallet, you can <a href="#">download your certificate</a> and then send it to your iPhone - for example, by emailing the file to yourself and opening it on your phone.</p>
-    <p class="nhsuk-body">If you are on a public computer, make sure to delete the file after use.</p>
+    <p class="nhsuk-body">For security, only do this on a device and Internet connection that you trust, as your information may be intercepted.</p>
 
 
     <h2 class="nhsuk-heading-m">How to get your help</h2>
